test/fail/type-self-dependency-recursive.grace
type A = B
type B = a
